--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
     "http": "0.0.1-security",
     "node-fetch": "^2.6.1",
     "request": "^2.88.2"
+  },
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
