--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample-http",
   "version": "0.0.1",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "node-fetch": "^2.6.1",
